# kgcl-schema

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  about.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
A/: index.html
Activity/: index.html
AddNodeToSubset/: index.html
AddToSubset/: index.html
Agent/: index.html
AllowsAutomaticReplacementOfEdges/: index.html
Annotation/: index.html
B/: index.html
Change/: index.html
ChangeClassType/: index.html
ChangeMixin/: index.html
ChangeSetSummaryStatistic/: index.html
ClassCreation/: index.html
ClassNode/: index.html
ComplexChange/: index.html
Configuration/: index.html
Creation/: index.html
DatatypeChange/: index.html
DatatypeOrLanguageTagChange/: index.html
Deletion/: index.html
Edge/: index.html
EdgeChange/: index.html
EdgeCreation/: index.html
EdgeDeletion/: index.html
EdgeLogicalInterpretationChange/: index.html
EdgeObsoletion/: index.html
EdgeRewiring/: index.html
Event/: index.html
ForProfit/: index.html
InstanceNode/: index.html
KGCL-PROV/: index.html
LanguageTag/: index.html
LanguageTagChange/: index.html
LogicalAxiomChange/: index.html
LogicalDefinition/: index.html
MappingCreation/: index.html
MedicalEvent/: index.html
MultiNodeObsoletion/: index.html
NameBecomesSynonym/: index.html
NewSynonym/: index.html
NewTextDefinition/: index.html
Node/: index.html
NodeAnnotationChange/: index.html
NodeAnnotationReplacement/: index.html
NodeChange/: index.html
NodeCreation/: index.html
NodeMove/: index.html
(+552 files in other folders)
